[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/SelectableUnit.gd" type="Script" id=1]
[ext_resource path="res://icons/icon.png" type="Texture" id=2]
[ext_resource path="res://icons/facing_marker_16.png" type="Texture" id=3]

[node name="SelectableUnit" type="Node2D" index="0" groups=[
"selectable_objects",
]]

script = ExtResource( 1 )
base_size = 1.9

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_rect = Rect2( 16, 16, 32, 32 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Facing" type="Sprite" parent="." index="1"]

visible = false
modulate = Color( 1, 0.109375, 0.109375, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Collider" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[connection signal="mouse_entered" from="Collider" to="." method="_collider_mouse_entered"]

[connection signal="mouse_exited" from="Collider" to="." method="_collider_mouse_exited"]


